cmake_minimum_required(VERSION 3.20)

project(LSM LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Top-level options to control tests. Defaults OFF (no tests built).
option(ENABLE_ALL_TESTS "Enable all tests in test/ (convenience)" OFF)
option(ENABLE_BLOCK_TEST "Enable Block unit tests" OFF)
option(ENABLE_BLOCKMETA_TEST "Enable BlockMeta unit tests" OFF)
option(ENABLE_MEMTABLE_TEST "Enable MemTable unit tests" OFF)
option(ENABLE_SKIPLIST_TEST "Enable Skiplist unit tests" OFF)
option(ENABLE_SSTABLE_TEST "Enable Sstable unit tests" OFF)
option(ENABLE_LSM_TEST "Enable LSM unit tests" OFF)

# If the convenience switch is ON, force-enable all individual test options
if(ENABLE_ALL_TESTS)
	set(ENABLE_BLOCK_TEST ON CACHE BOOL "Enable Block unit tests" FORCE)
	set(ENABLE_BLOCKMETA_TEST ON CACHE BOOL "Enable BlockMeta unit tests" FORCE)
	set(ENABLE_MEMTABLE_TEST ON CACHE BOOL "Enable MemTable unit tests" FORCE)
	set(ENABLE_SKIPLIST_TEST ON CACHE BOOL "Enable Skiplist unit tests" FORCE)
	set(ENABLE_SSTABLE_TEST ON CACHE BOOL "Enable Sstable unit tests" FORCE)
	set(ENABLE_LSM_TEST ON CACHE BOOL "Enable LSM unit tests" FORCE)
endif()

# Small helper to decide whether any tests are enabled
if(ENABLE_BLOCK_TEST OR ENABLE_BLOCKMETA_TEST OR ENABLE_MEMTABLE_TEST OR ENABLE_SKIPLIST_TEST OR ENABLE_SSTABLE_TEST OR ENABLE_LSM_TEST)
	set(LSM_ENABLE_TESTS ON)
else()
	set(LSM_ENABLE_TESTS OFF)
endif()

# Add tests directory only when tests are enabled
if(LSM_ENABLE_TESTS)
	# generate a small CMake snippet in `test/LSMTestOptions.cmake` so
	# that per-test CMakeLists can include it when configured individually.
	file(WRITE ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "# Auto-generated by top-level CMakeLists\n")
	file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_BLOCK_TEST ${ENABLE_BLOCK_TEST})\n")
	file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_BLOCKMETA_TEST ${ENABLE_BLOCKMETA_TEST})\n")
	file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_MEMTABLE_TEST ${ENABLE_MEMTABLE_TEST})\n")
	file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_SKIPLIST_TEST ${ENABLE_SKIPLIST_TEST})\n")
	file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_SSTABLE_TEST ${ENABLE_SSTABLE_TEST})\n")
	file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_LSM_TEST ${ENABLE_LSM_TEST})\n")
	message(STATUS "Wrote test/LSMTestOptions.cmake (use this with per-test cmake invocations)")
	add_subdirectory(test)
else()
	message(STATUS "Tests are disabled by default. Enable tests with -DENABLE_SSTABLE_TEST=ON etc.")
endif()

# Keep an executable target for the main program (optional)
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
	add_executable(lsm_main main.cpp)
	target_include_directories(lsm_main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
endif()