cmake_minimum_required(VERSION 4.0)

project(LSM LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ===== 1. 查找依赖库 =====
find_package(spdlog REQUIRED)

find_package(fmt QUIET)
if(NOT fmt_FOUND)
    message(STATUS "fmt library not found, will use spdlog's bundled fmt")
    target_compile_definitions(spdlog::spdlog INTERFACE SPDLOG_FMT_EXTERNAL=OFF)
else()
    message(STATUS "Using system fmt library")
endif()

find_package(GTest REQUIRED)

# ===== 2. 收集源文件 =====
file(GLOB_RECURSE LSM_SOURCES 
    "src/core/*.cpp"
    "src/iterator/*.cpp"
    "src/storage/*.cpp"
    "src/compaction/*.cpp"
    "src/LSM.cpp"
)

# ===== 3. 创建 lsm_lib 静态库 =====
add_library(lsm_lib STATIC ${LSM_SOURCES})
target_include_directories(lsm_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(lsm_lib PUBLIC spdlog::spdlog)
if(TARGET fmt::fmt)
    target_link_libraries(lsm_lib PUBLIC fmt::fmt)
endif()

# ===== 4. 创建主程序（如果 main.cpp 存在） =====
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
    add_executable(lsm_main main.cpp)
    target_link_libraries(lsm_main 
        PRIVATE 
            lsm_lib 
            GTest::gtest 
            GTest::gtest_main 
            Threads::Threads
    )
    target_include_directories(lsm_main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
endif()

# ===== 测试开关选项 =====
option(ENABLE_ALL_TESTS "Enable all tests in test/ (convenience)" OFF)
option(ENABLE_BLOCK_TEST "Enable Block unit tests" OFF)
option(ENABLE_BLOCKMETA_TEST "Enable BlockMeta unit tests" OFF)
option(ENABLE_MEMTABLE_TEST "Enable MemTable unit tests" OFF)
option(ENABLE_SKIPLIST_TEST "Enable Skiplist unit tests" OFF)
option(ENABLE_SSTABLE_TEST "Enable Sstable unit tests" OFF)
option(ENABLE_LSM_TEST "Enable LSM unit tests" OFF)

if(ENABLE_ALL_TESTS)
    set(ENABLE_BLOCK_TEST ON CACHE BOOL "Enable Block unit tests" FORCE)
    set(ENABLE_BLOCKMETA_TEST ON CACHE BOOL "Enable BlockMeta unit tests" FORCE)
    set(ENABLE_MEMTABLE_TEST ON CACHE BOOL "Enable MemTable unit tests" FORCE)
    set(ENABLE_SKIPLIST_TEST ON CACHE BOOL "Enable Skiplist unit tests" FORCE)
    set(ENABLE_SSTABLE_TEST ON CACHE BOOL "Enable Sstable unit tests" FORCE)
    set(ENABLE_LSM_TEST ON CACHE BOOL "Enable LSM unit tests" FORCE)
endif()

# 判断是否有任何测试被启用
if(ENABLE_BLOCK_TEST OR ENABLE_BLOCKMETA_TEST OR ENABLE_MEMTABLE_TEST OR 
   ENABLE_SKIPLIST_TEST OR ENABLE_SSTABLE_TEST OR ENABLE_LSM_TEST)
    set(LSM_ENABLE_TESTS ON)
else()
    set(LSM_ENABLE_TESTS OFF)
endif()

if(LSM_ENABLE_TESTS)
    # 生成测试配置文件（供 test 子目录使用）
    file(WRITE ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "# Auto-generated by top-level CMakeLists\n")
    file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_BLOCK_TEST ${ENABLE_BLOCK_TEST})\n")
    file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_BLOCKMETA_TEST ${ENABLE_BLOCKMETA_TEST})\n")
    file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_MEMTABLE_TEST ${ENABLE_MEMTABLE_TEST})\n")
    file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_SKIPLIST_TEST ${ENABLE_SKIPLIST_TEST})\n")
    file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_SSTABLE_TEST ${ENABLE_SSTABLE_TEST})\n")
    file(APPEND ${CMAKE_SOURCE_DIR}/test/LSMTestOptions.cmake "set(ENABLE_LSM_TEST ${ENABLE_LSM_TEST})\n")
    message(STATUS "Wrote test/LSMTestOptions.cmake (use this with per-test cmake invocations)")
    
    # 仅添加一次 test 子目录
    add_subdirectory(test)
else()
    message(STATUS "Tests are disabled by default. Enable tests with -DENABLE_SSTABLE_TEST=ON etc.")
endif()